category-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: category-service
  name: category-service
spec:
  replicas: 1
  selector:
    matchLabels:
      run: category-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: category-service
    spec:
      containers:
        - image: category-service
          imagePullPolicy: Never
          name: category-service
          ports:
            - containerPort: 8085
          resources: {}
status: {}
