category-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: category-service
  name: category-service
spec:
  ports:
    - port: 8085
      protocol: TCP
      targetPort: 8085
  selector:
    run: category-service
  type: LoadBalancer
status:
  loadBalancer: {}
