hska-vis-legacy-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: legacywebshop
  name: legacywebshop
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: legacywebshop
  type: LoadBalancer
status:
  loadBalancer: {}
