product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  ports:
    - name: "product-service-port"
      port: 8081
      targetPort: 8081
  selector:
    run: product-service
status:
  loadBalancer: {}
