web-shop-db-image-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: web-shop-db-image
  name: web-shop-db-image
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
      name: http-web-shop-db-image
  selector:
    run: web-shop-db-image
  type: LoadBalancer  
status:
  loadBalancer: {}
