local-dev-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: local-dev-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/local-dev-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/local-dev-net: "true"
